# lifecycle-manager

./: API.md  Backend.md  DB.md  README.md  memo.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: categories.py  eol.py  maintenance.py  products.py
backend/app/models/: eol.py  maintenance.py  product.py  status.md
backend/app/schemas/: eol.py  maintenance.py  product.py
backend/app/services/: endoflife_api.py
deploy/: compose.yaml
